chore: add lambda

--- a/easyvmaf-s3/Dockerfile
+++ b/easyvmaf-s3/Dockerfile
@@ -1,4 +1,4 @@
-FROM gfdavila/easyvmaf:1.2
+FROM eyevinntechnology/easyvmaf:latest
 RUN pip3 install boto3
 WORKDIR  /app/easyVmaf-${easyVmaf_version}
 COPY easyvmaf_s3.py easyvmaf_s3.py
