--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -7,51 +7,23 @@
     "dist",
     "src"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "build": "tsc --project ./"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 120,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
+  "engines" : { 
+    "node" : ">=16.0.0"
   },
   "name": "@eyevinn/autoabr",
-  "author": "Jesper Lundqvist",
-  "module": "dist/autoabr.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/autoabr.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/autoabr.esm.js",
-      "limit": "10 KB"
-    }
+  "author": "Eyevinn Technology <work@eyevinn.se>",
+  "contributors": [
+    "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)"
   ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^5.0.4",
-    "@types/aws-sdk": "^2.7.0",
-    "@types/aws-lambda": "^8.10.86",
-    "husky": "^7.0.2",
-    "size-limit": "^5.0.4",
-    "tsdx": "^0.14.1",
+    "@types/fluent-ffmpeg": "^2.1.18",
+    "@types/jest": "^27.4.1",
+    "@types/papaparse": "^5.3.1",
     "tslib": "^2.3.1",
-    "typescript": "^3.9.10"
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.36.0",
@@ -59,8 +31,8 @@
     "@aws-sdk/client-s3": "^3.36.0",
     "@aws-sdk/credential-providers": "^3.36.0",
     "@aws-sdk/lib-storage": "^3.36.0",
-    "@types/fluent-ffmpeg": "^2.1.18",
-    "@types/papaparse": "^5.3.1",
+    "@types/aws-lambda": "^8.10.86",
+    "@types/aws-sdk": "^2.7.0",
     "fluent-ffmpeg": "^2.1.2",
     "papaparse": "^5.3.1",
     "winston": "^3.3.3",
