--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "scripts": {
     "build": "tsc --project ./"
   },
-  "engines" : { 
-    "node" : ">=16.0.0"
-  },
   "name": "@eyevinn/autoabr",
   "author": "Eyevinn Technology <work@eyevinn.se>",
   "contributors": [
@@ -32,7 +29,7 @@
     "@aws-sdk/credential-providers": "^3.36.0",
     "@aws-sdk/lib-storage": "^3.36.0",
     "@types/aws-lambda": "^8.10.86",
-    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1123.0",
     "fluent-ffmpeg": "^2.1.2",
     "papaparse": "^5.3.1",
     "winston": "^3.3.3",
