--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "aws-sdk": "^2.1123.0",
     "fluent-ffmpeg": "^2.1.2",
     "papaparse": "^5.3.1",
+    "typedoc": "^0.22.15",
     "winston": "^3.3.3",
     "yaml": "^1.10.2"
   }
