--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "src"
   ],
   "scripts": {
-    "build": "tsc --project ./"
+    "build": "tsc --project ./",
+    "docs": "npx typedoc src/index.ts"
   },
   "name": "@eyevinn/autovmaf",
   "author": "Eyevinn Technology <work@eyevinn.se>",
@@ -32,6 +33,7 @@
     "aws-sdk": "^2.1123.0",
     "fluent-ffmpeg": "^2.1.2",
     "papaparse": "^5.3.1",
+    "typedoc": "^0.22.15",
     "winston": "^3.3.3",
     "yaml": "^1.10.2"
   }
