chore: add contributor

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "name": "@eyevinn/autovmaf",
   "author": "Eyevinn Technology <work@eyevinn.se>",
   "contributors": [
-    "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)"
+    "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)",
+    "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)"
   ],
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.18",
