chore: only publish docs on new release

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,8 +1,7 @@
 name: Generate docs and deploy
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }}
