--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsc --project ./",
     "test": "jest",
+    "test-coverage": "jest --coverage",
     "docs": "npx typedoc src/index.ts"
   },
   "name": "@eyevinn/autovmaf",
