--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "@eyevinn/autovmaf",
   "version": "0.3.0",
   "license": "MIT",
+  "author": "Eyevinn Technology <work@eyevinn.se>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Eyevinn/autovmaf.git"
+  },
+  "keywords": ["vmaf"],
+  "contributors": [
+    "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)",
+    "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)"
+  ],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
@@ -13,12 +24,6 @@
     "test-coverage": "jest --coverage",
     "docs": "npx typedoc src/index.ts"
   },
-  "name": "@eyevinn/autovmaf",
-  "author": "Eyevinn Technology <work@eyevinn.se>",
-  "contributors": [
-    "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)",
-    "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)"
-  ],
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
     "@babel/preset-env": "^7.17.10",
