--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "contributors": [
     "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)",
-    "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)"
+    "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)",
+    "Robin Olsson <robin.olsson@eyevinn.se> (Eyevinn Technology AB)"
   ],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
