feat: Added support for specifying bitrate range for individual resolutions (#43)
* feat: Added option to add a bitrate range for specific resolutions

* feat: Added option to add a bitrate range for specific resolutions

* fix: cleanup

* fix: cleanup if statement

* fix: refactored test data to own files, added testing for bitrate ranges

* fix: Fixed method comments

* fix: Removed not used imports from create-job and brute-force

* feat: added possibility to leave min or max range undefined, leaving the range open on the undefined side

* fix: Removed log used for testing

* fix: Fixed hardcoded values, and removed undefined properties from test data

* fix: Cleanup undefined properties and removed unnecessary condition

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "contributors": [
     "Oscar Nord <oscar.nord@eyevinn.se> (Eyevinn Technology AB)",
     "Jonathan Walter <jonathan.walter@eyevinn.se> (Eyevinn Technology AB)",
-    "Gustav Grusell <gustav.grusell@eyevinn.se> (Eyevinn Technology AB)"
+    "Gustav Grusell <gustav.grusell@eyevinn.se> (Eyevinn Technology AB)",
+    "Robin Olsson <robin.olsson@eyevinn.se> (Eyevinn Technology AB)"
   ],
   "main": "dist/index.js",
   "bin": {
