--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dev": "tsc --watch --project ./",
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "docs": "npx typedoc src/index.ts"
+    "docs": "npx typedoc src/index.ts",
+    "postversion": "git push && git push --tags"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.17.10",
