--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
   "devDependencies": {
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/fluent-ffmpeg": "^2.1.18",
     "@types/jest": "^27.5.0",
     "@types/papaparse": "^5.3.1",
     "@types/yargs": "^17.0.13",
     "aws-sdk-client-mock": "^0.6.2",
     "jest": "^28.1.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@types/fluent-ffmpeg": "file:local-types/fluent-ffmpeg"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.36.0",
@@ -52,7 +52,7 @@
     "@aws-sdk/lib-storage": "^3.36.0",
     "@types/aws-lambda": "^8.10.86",
     "aws-sdk": "^2.1123.0",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "git@github.com:eyevinn/node-fluent-ffmpeg#measure-cpu",
     "papaparse": "^5.3.1",
     "typedoc": "^0.22.15",
     "which": "^2.0.2",
