--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/aws-lambda": "^8.10.86",
     "aws-sdk": "^2.1123.0",
     "fluent-ffmpeg": "https://github.com/Eyevinn/node-fluent-ffmpeg.git#measure-cpu",
+    "node-libcurl": "^3.0.0",
     "objects-to-csv": "^1.3.6",
     "papaparse": "^5.3.1",
     "typedoc": "^0.22.15",
