--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
-
-// see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "strictNullChecks": true,
-    "declaration": true,
-    "declarationDir": "./dist"
-  },
-  "lib": ["es2016"],
-  "include": ["src", "types"],
+    /* Visit https://aka.ms/tsconfig to read more about this file */
+
+    /* Language and Environment */
+    "target": "es2022" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "lib": [
+      "es2022"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+
+    /* Modules */
+    "module": "commonjs" /* Specify what module code is generated. */,
+    "resolveJsonModule": true /* Enable importing .json files. */,
+    "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */
+  }
 }
