--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "build": "tsc --project ./",
+    "lint": "eslint .",
     "dev": "tsc --watch --project ./",
     "test": "jest",
     "test-coverage": "jest --coverage",
@@ -43,7 +44,13 @@
     "aws-sdk-client-mock": "^0.6.2",
     "jest": "^28.1.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.36.0",
