--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "build": "tsc --project ./",
+    "pretty": "prettier --check --ignore-unknown .",
     "dev": "tsc --watch --project ./",
     "test": "jest",
     "test-coverage": "jest --coverage",
@@ -43,7 +44,8 @@
     "aws-sdk-client-mock": "^0.6.2",
     "jest": "^28.1.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.36.0",
