--- a/tests/resources/pipeline.yml
+++ b/tests/resources/pipeline.yml
@@ -1,4 +1,4 @@
 local:
-  easyVmafPath: "/home/tom_snooze/dev/work/eyevinn/internal/easyVmaf/easyVmaf.py"
-  ffmpegEncoder: "libx264"
+  easyVmafPath: '/home/tom_snooze/dev/work/eyevinn/internal/easyVmaf/easyVmaf.py'
+  ffmpegEncoder: 'libx264'
   onlyOnePass: true
