--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-
 // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
 {
   "compilerOptions": {
@@ -14,5 +13,5 @@
     "declarationDir": "./dist"
   },
   "lib": ["es2016"],
-  "include": ["src", "types"],
+  "include": ["src", "types"]
 }
