--- a/examples/local/local-job-crf.yaml
+++ b/examples/local/local-job-crf.yaml
@@ -13,7 +13,7 @@ pipeline:
   ffmpegOptions:
     '-pix_fmt': 'yuv420p'
     '-preset': 'veryslow'
-    '-x265-params': 'crf=%CRF%:scenecut=0:keyint=50:min-keyint=50:open-gop=0'
+    '-x265-params': 'crf=${CRF}:scenecut=0:keyint=50:min-keyint=50:open-gop=0'
   easyVmafExtraArgs:
     '-threads': 20
 pipelineVariables:
