--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "fluent-ffmpeg": "https://github.com/Eyevinn/node-fluent-ffmpeg.git#measure-cpu",
     "objects-to-csv": "^1.3.6",
     "papaparse": "^5.3.1",
+    "sqlite3": "^5.1.7",
     "typedoc": "^0.22.15",
     "which": "^2.0.2",
     "winston": "^3.3.3",
