--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test-coverage": "jest --coverage",
     "lint:typos": "typos .",
     "format:typos": "typos -w .",
+    "lint": "eslint .",
     "docs": "npx typedoc src/index.ts",
     "postversion": "git push && git push --tags"
   },
@@ -43,7 +44,12 @@
     "@types/jest": "^27.5.0",
     "@types/papaparse": "^5.3.1",
     "@types/yargs": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "aws-sdk-client-mock": "^0.6.2",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^28.1.3",
     "prettier": "^3.2.5",
     "tslib": "^2.3.1",
