--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test-coverage": "jest --coverage",
     "lint:typos": "typos .",
     "format:typos": "typos -w .",
+    "lint": "eslint .",
     "docs": "npx typedoc src/index.ts",
     "postversion": "git push && git push --tags"
   },
@@ -43,23 +44,30 @@
     "@types/jest": "^27.5.0",
     "@types/papaparse": "^5.3.1",
     "@types/yargs": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "aws-sdk-client-mock": "^0.6.2",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^28.1.3",
+    "prettier": "^3.2.5",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.2",
-    "prettier": "^3.2.5"
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.36.0",
     "@aws-sdk/client-mediaconvert": "^3.36.0",
-    "@aws-sdk/client-s3": "^3.36.0",
+    "@aws-sdk/client-s3": "^3.629.0",
     "@aws-sdk/credential-providers": "^3.36.0",
     "@aws-sdk/lib-storage": "^3.36.0",
+    "@aws-sdk/s3-request-presigner": "^3.629.0",
     "@types/aws-lambda": "^8.10.86",
     "aws-sdk": "^2.1584.0",
     "fluent-ffmpeg": "https://github.com/Eyevinn/node-fluent-ffmpeg.git#measure-cpu",
     "objects-to-csv": "^1.3.6",
     "papaparse": "^5.3.1",
+    "sqlite3": "^5.1.7",
     "typedoc": "^0.22.15",
     "which": "^2.0.2",
     "winston": "^3.3.3",
